[package]
name = "hprof-slurp"
version = "0.6.2"
authors = ["Arnaud Gourlay <arnaud.gourlay@gmail.com>"]
description = "JVM heap dump hprof file analyzer"
repository = "https://github.com/agourlay/hprof-slurp"
license = "Apache-2.0"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["java", "jvm", "heap-dump", "analyzer", "hprof"]
edition = "2024"

[dependencies]
nom = "8.0.0"
indicatif = "0.18.3"
clap = { version = "4.5.53", features = ["cargo"] }
indoc = "2.0.7"
ahash = "0.8.12"
thiserror = "2.0.17"
crossbeam-channel = "0.5.15"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
chrono = "0.4.42"

[profile.release]
lto = "fat"
codegen-units = 1