[package]
name = "heaptrail"
version = "0.7.1"
authors = [
    "John Neerdael <john@neerdael.nl>",
    "Arnaud Gourlay <arnaud.gourlay@gmail.com>",
]
description = "JVM/Android heap dump (hprof) analyzer with referrer tracing, path-to-root walk, and snapshot diff. Forked from hprof-slurp with significantly expanded triage features."
repository = "https://github.com/johnneerdael/heaptrail"
homepage = "https://github.com/johnneerdael/heaptrail"
license = "Apache-2.0"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["heap-dump", "hprof", "android", "jvm", "memory-leak"]
edition = "2024"

[dependencies]
nom = "8.0.0"
indicatif = "0.18.4"
clap = { version = "4.6.1", features = ["cargo", "derive"] }
indoc = "2.0.7"
ahash = "0.8.12"
thiserror = "2.0.18"
crossbeam-channel = "0.5.15"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
chrono = "0.4.44"
globset = "0.4"

[profile.release]
lto = "fat"
codegen-units = 1
